--- a/css/styles.css
+++ b/css/styles.css
@@ -1,13 +1,52 @@
 body {
     margin: 0;
-    background:rgb(62, 3, 65);
+    background-image: url("https://images.unsplash.com/photo-1649355403641-c32a19871d7e?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2940&q=80");
+    background-size: cover;
     font-family: Arial, Helvetica, sans-serif;
+  }
+  .splash{
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  margin-top: 35vh;
+  height: 65vh;
+  background-image: url("https://images.unsplash.com/photo-1649355403641-c32a19871d7e?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2940&q=80");
+  background-size: cover;
+  z-index: 200;
+  color: white;
+  text-align: center;
+  line-height: 90vh;
+  font-size:larger;
+  }
+  .splash.display-none{
+    position: fixed;
+    opacity: 0;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    background: rgb(72, 3, 75);
+    z-index: -10;
+    color: rgb(214, 250, 214);
+    text-align: center;
+    line-height: 90vh;
+    }
+  
+  @keyframes fadeIn {
+    to {
+      opacity: 1;
+    }
+  }
+  .fade-in {
+    opacity: 0;
+    animation: fadeIn 1s ease-in forwards;
   }
   #memory-board  {
    display: flex;
    flex-wrap: wrap;
    margin-top: -80px;
-    background:rgb(107, 11, 110);
+    background:rgb(119, 8, 71);
     border-radius: 10px;
     font-size: 30px;
     font-family: Arial;
@@ -26,6 +65,8 @@ body {
     padding: 10px;
     margin: 5px;
     margin-left: 10%;
+    height: 60px;
+    aspect-ratio: 1;
     transform-style: preserve-3d;
     transition: transform .5s;
   }
@@ -33,10 +74,10 @@ body {
     transform: scale(.80);
     }
   img{
-  width: 50px;
-  }
+      width: 50px;
+      }
   #memory-board2  {
-     background:rgb(107, 11, 110);
+     background:rgb(119, 8, 71);
      border-radius: 10px;
      font-size: 30px;
      font-family: Arial;
@@ -74,30 +115,72 @@ body {
     
 
   h1{
-    color: rgb(214, 250, 214);
+    color: rgb(235, 179, 28);
     text-align: center;
     font-size:150px;
     margin: auto;
     }
 
-    .buttons{
+    .start{
       margin-left: 50%;
       width: 100px;
       margin-top: 30px;
+      border: none;
+      outline: none;
+      cursor: pointer;
+      background-color: rgb(218, 179, 215);
+      color: black;
+      font-size: large;
+     
       }
 
    .buttons:active{
       transform: scale(.97);
       }
-  #score {
+      .restart{
+        border: none;
+        outline: none;
+        cursor: pointer;
+        background-color: rgb(218, 179, 215);
+        color: black;
+        font-size: large;
+        width: 100px;
+      } 
+    #score {
     color: rgb(214, 250, 214);
     text-align:right;
     font-size:20px;
     margin-right: 40px;
     }
-.restart {
-  visibility: hidden;
-  }
+
+      .winner {
+        color: rgb(235, 179, 28);
+        text-align: center;
+        font-size:50px;
+        margin: auto;
+        background-image: url("https://images.unsplash.com/photo-1518706016428-64215811367b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1740&q=80");
+       background-size: cover;
+        border-radius: 10px;
+        width: 500px;
+        padding: 100px;
+        
+        }
+        .loser {
+          color: rgb(243, 117, 186);
+          text-align: center;
+          font-size:50px;
+          margin: auto;
+          background-image: url("https://images.unsplash.com/photo-1635713252616-8e112d26f3b3?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80");
+          background-size: cover;
+          border-radius: 10px;
+          width: 500px;
+          padding: 100px;
+         
+          }
+          .hidden{
+            display: none;
+          }
+
 
  
   
